# pinray

./: Cargo.toml  LICENSE  README.md
crates/core/: Cargo.toml
crates/core/src/: backend.rs  config.rs  error.rs
crates/pinray/: Cargo.toml
crates/pinray-core/: Cargo.toml
crates/pinray-core/src/: audio.rs  config.rs  frame.rs  lib.rs  session.rs  source.rs
crates/pinray-platform-linux/: Cargo.toml
crates/pinray-platform-linux/src/: wayland.rs
crates/pinray-platform-macos/: Cargo.toml
crates/pinray-platform-macos/src/: lib.rs
crates/pinray-platform-windows/: Cargo.toml
crates/pinray/examples/: macos_smoke.rs  wayland_smoke.rs
crates/pinray/src/: lib.rs
crates/platform-linux/: Cargo.toml
crates/platform-linux/src/: lib.rs  portal.rs  wayland.rs
crates/platform-macos/: Cargo.toml
crates/platform-macos/src/: capture.rs  content.rs  lib.rs  permissions.rs
crates/platform-windows/: Cargo.toml
crates/platform-windows/src/: lib.rs
