[workspace]
members = [
    "crates/core",
    "crates/platform-linux",
    "crates/platform-macos",
    "crates/platform-windows",
    "crates/pinray",
]
resolver = "3"

[workspace.package]
description = "Multi-platform screen capture library for Rust"
edition = "2024"
license = "MIT"
repository = "https://github.com/Itz-Agasta/pinray"
version = "0.1.0"

[workspace.dependencies]
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
