[workspace]
members = [
    "crates/core",
    "crates/platform-linux",
    "crates/platform-macos",
    "crates/platform-windows",
    "crates/pinray",
]
resolver = "3"

[workspace.package]
description = "Multi-platform screen capture library for Rust"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Itz-Agasta/pinray"
version = "0.1.1"

[workspace.dependencies]
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
