[package]
name = "pinray-platform-macos"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
pinray-core = { path = "../core", version = "0.1" }
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
dispatch2 = "0.3.1"
objc2 = "0.6"
objc2-core-graphics = { version = "0.3.2", features = ["CGGeometry"] }
objc2-core-media = { version = "0.3.2", features = ["objc2-core-video"] }
objc2-core-video = "0.3.2"
objc2-foundation = "0.3.2"
objc2-screen-capture-kit = { version = "0.3.2", features = ["SCStream", "SCShareableContent"] }
